--- a/templates/member/mypage-payment.html
+++ b/templates/member/mypage-payment.html
@@ -51,28 +51,28 @@
     <link rel="preload" href="https://www.googletagmanager.com/gtag/js?id=G-HLK7K0XF15" as="script">
     <link rel="preload" href="https://t1.daumcdn.net/kas/static/kp.js" as="script">
     <link rel="preload" href="https://cdn.megadata.co.kr/dist/prod/v2/mtm.js?adverId=jumpit&amp;device=B" as="script">
-    <title>점핏 | 결제 관리</title>
+    <title>템프 | 결제 관리</title>
     <meta name="description" content="개발자 맞춤 이력서와 채용 공고, 취업·이직 꿀팁 콘텐츠 확인하고 점핏으로 FIT하게 취업하자!">
     <meta name="keywords" content="개발자 채용,이력서,이력서양식,스타트업 채용,대기업 채용,취업,구인,구직,면접제안,기업정보,커리어,커리어개발,기업정보,채용정보">
     <meta name="naver-site-verification" content="b0e5d9e30ab4abe67694a4472741b130e5833906">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/publishing/static/images/member/favicon.ico" />
     <meta name="next-size-adjust">
     <script src="/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js" nomodule=""></script>
     <style data-styled="active" data-styled-version="6.0.7">
     </style>
-    <link rel="stylesheet" type="text/css" href="/static/css/member/member-mypage-payment1.css">
-    <link rel="stylesheet" href="/static/css/member/member-mypage-payment2.css">
-    <link rel="stylesheet" href="/static/css/member/member-mypage-payment3.css">
+    <link rel="stylesheet" type="text/css" href="/publishing/static/css/member/member-mypage-payment1.css">
+    <link rel="stylesheet" href="/publishing/static/css/member/member-mypage-payment2.css">
+    <link rel="stylesheet" href="/publishing/static/css/member/member-mypage-payment3.css">
     <script async="" src="//static.airbridge.io/sdk/latest/airbridge.min.js"></script>
     <style>
         @font-face {
             font-family: Retro;
-            src: url("/static/member/fonts/establish\ Retrosans.ttf");
+            src: url("/publishing/static/member/fonts/establish\ Retrosans.ttf");
         }
 
         @font-face {
             font-family: Jumpit;
-            src: url("/static/member/fonts/ff840cfebfb63b0c-s.p.woff2");
+            src: url("/publishing/static/member/fonts/ff840cfebfb63b0c-s.p.woff2");
         }
 
         * {
