--- a/templates/member/mypage-main.html
+++ b/templates/member/mypage-main.html
@@ -3,57 +3,24 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="preconnect" href="https://cdn.jumpit.co.kr" />
-    <link href="https://cdn.jumpit.co.kr" rel="dns-prefetch" />
-    <link rel="preconnect" href="https://www.googletagmanager.com" />
-    <link href="https://www.googletagmanager.com" rel="dns-prefetch" />
-    <!-- <meta name="viewport"
-        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" /> -->
-    <link rel="preload" href="/_next/static/media/ff840cfebfb63b0c-s.p.woff2" as="font" crossorigin=""
-        type="font/woff2" />
-    <link rel="stylesheet" href="/static/css/member/member-mypage-main1.css" data-precedence="next" />
-    <link rel="stylesheet" href="/static/css/member/member-mypage-main2.css" />
-    <link rel="stylesheet" href="/static/css/member/member-mypage-main3.css" />
-    <link rel="preload" as="script" fetchpriority="low"
-        href="https://jumpit.saramin.co.kr/_next/static/chunks/webpack-e00980e9ec739c33.js" />
-    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
-    <script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-K2J5HLX"></script>
-    <script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script>
-    <script src="https://jumpit.saramin.co.kr/_next/static/chunks/fd9d1056-1403efed8a5d9a56.js" async=""></script>
-    <script src="https://jumpit.saramin.co.kr/_next/static/chunks/2472-cc8bce19171016d7.js" async=""></script>
-    <script src="https://jumpit.saramin.co.kr/_next/static/chunks/main-app-85571a0f19fa6cc2.js" async=""></script>
-    <script src="https://jumpit.saramin.co.kr/_next/static/chunks/6394-782c5889429c5852.js" async=""></script>
-    <script src="https://jumpit.saramin.co.kr/_next/static/chunks/5526-48949280dbc9d3fa.js" async=""></script>
-    <script src="https://jumpit.saramin.co.kr/_next/static/chunks/8285-67151ff55d513e44.js" async=""></script>
-    <script src="https://jumpit.saramin.co.kr/_next/static/chunks/9222-0b87edff29c22664.js" async=""></script>
-    <script src="https://jumpit.saramin.co.kr/_next/static/chunks/9903-e4aec8f8082baf1a.js" async=""></script>
-    <script src="https://jumpit.saramin.co.kr/_next/static/chunks/9536-17c5180b41a54dae.js" async=""></script>
-    <script src="https://jumpit.saramin.co.kr/_next/static/chunks/5812-2e7efb9d8229a50d.js" async=""></script>
-    <script src="https://jumpit.saramin.co.kr/_next/static/chunks/1527-600699e62b81c450.js" async=""></script>
-    <link rel="preload" href="https://dynamic.criteo.com/js/ld/ld.js?a=116898" as="script" />
-    <link rel="preload" href="https://www.googletagmanager.com/gtag/js?id=G-HLK7K0XF15" as="script" />
-    <link rel="preload" href="https://t1.daumcdn.net/kas/static/kp.js" as="script" />
-    <link rel="preload" href="https://cdn.megadata.co.kr/dist/prod/v2/mtm.js?adverId=jumpit&amp;device=B" as="script" />
-    <title>점핏 | 마이페이지</title>
-    <meta name="description" content="개발자 맞춤 이력서와 채용 공고, 취업·이직 꿀팁 콘텐츠 확인하고 점핏으로 FIT하게 취업하자!" />
-    <meta name="keywords" content="개발자 채용,이력서,이력서양식,스타트업 채용,대기업 채용,취업,구인,구직,면접제안,기업정보,커리어,커리어개발,기업정보,채용정보" />
-    <meta name="naver-site-verification" content="b0e5d9e30ab4abe67694a4472741b130e5833906" />
-    <link rel="icon" href="/favicon.ico" />
+
+    <link rel="stylesheet" href="/publishing/static/css/member/member-mypage-main1.css" data-precedence="next" />
+    <link rel="stylesheet" href="/publishing/static/css/member/member-mypage-main2.css" />
+    <link rel="stylesheet" href="/publishing/static/css/member/member-mypage-main3.css" />
+    <title>템프 | 마이페이지</title>
+    <link rel="icon" href="/publishing/static/images/member/favicon.ico" />
     <meta name="next-size-adjust" />
-    <script src="https://jumpit.saramin.co.kr/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js" nomodule=""></script>
     <style data-styled="active" data-styled-version="6.0.7">
     </style>
-    <script async="" src="//static.airbridge.io/sdk/latest/airbridge.min.js"></script>
-    <!-- head에 필요 없는 내용 수정 중 -->
     <style>
         @font-face {
             font-family: Retro;
-            src: url("/static/member/fonts/establish\ Retrosans.ttf");
+            src: url("/publishing/static/member/fonts/establish\ Retrosans.ttf");
         }
 
         @font-face {
             font-family: Jumpit;
-            src: url("/static/member/fonts/ff840cfebfb63b0c-s.p.woff2");
+            src: url("/publishing/static/member/fonts/ff840cfebfb63b0c-s.p.woff2");
         }
 
         * {
@@ -68,7 +35,7 @@
             <div class="div-sc2">
                 <div class="logo-wrap">
                     <a aria-label="점핏" class="logo-top" href="/">
-                        <img src="/static/member/images/temp-logo.png" width="62" height="28" fill="none"
+                        <img src="/publishing/static/images/member/temp-logo.png" width="62" height="28" fill="none"
                             viewBox="0 0 62 28" aria-hidden="true">
                         <!-- <svg xmlns="http://www.w3.org/2000/svg" width="62"
                             height="28" fill="none" viewBox="0 0 62 28" aria-hidden="true">
