--- a/templates/member/mypage-main.html
+++ b/templates/member/mypage-main.html
@@ -162,20 +162,20 @@
                         <div class="mypagemenu-wrapper">
                             <ul class="mypagemenu1">
                                 <li class="mypagemenu2">
-                                    <a target="_self" href="/applications-status/applied">입사지원
+                                    <a target="_self" href="/publishing/templates/member/mypage-applied.html">입사지원
                                         현황</a>
                                 </li>
                                 <li class="mypagemenu2">
-                                    <a target="_self" href="/celebrate">스크랩 리스트</a>
+                                    <a target="_self" href="/publishing/templates/member/mypage-scraplist.html">스크랩 리스트</a>
                                 </li>
                                 <li class="mypagemenu2">
-                                    <a target="_self" href="/scraps">결제 관리</a>
+                                    <a target="_self" href="/publishing/templates/member/mypage-payment.html">결제 관리</a>
                                 </li>
                                 <li class="mypagemenu2-1">
-                                    <a target="_self" href="/notifications">계정 정보 설정</a>
+                                    <a target="_self" href="/publishing/templates/member/mypage-accountinfo.html">계정 정보 설정</a>
                                 </li>
                                 <li class="mypagemenu2">
-                                    <a target="_self" href="/account">계정 탈퇴</a>
+                                    <a target="_self" href="/publishing/templates/member/mypage-accountwithdrawl.html">계정 탈퇴</a>
                                 </li>
 
                             </ul>
@@ -666,7 +666,7 @@
         </div>
     </main>
     <div id="modal"></div>
-    <script src="/_next/static/chunks/webpack-e00980e9ec739c33.js" async=""></script>
+    <!-- <script src="/_next/static/chunks/webpack-e00980e9ec739c33.js" async=""></script>
     <script>
         (self.__next_f = self.__next_f || []).push([0]);
         self.__next_f.push([2, null]);
@@ -927,7 +927,7 @@
     <next-route-announcer style="position: absolute"></next-route-announcer><iframe allow="join-ad-interest-group"
         data-tagging-id="G-HLK7K0XF15" data-load-time="1737886601268" height="0" width="0"
         src="https://td.doubleclick.net/td/ga/rul?tid=G-HLK7K0XF15&amp;gacid=1029725707.1732531337&amp;gtm=45je51n0v877665575za200&amp;dma=0&amp;gcd=13l3l3l3l1l1&amp;npa=0&amp;pscdl=noapi&amp;aip=1&amp;fledge=1&amp;frm=0&amp;tag_exp=102067555~102067808~102081485~102123608&amp;z=1490588846"
-        style="display: none; visibility: hidden"></iframe>
+        style="display: none; visibility: hidden"></iframe> -->
 </body>
-
+<script src="/publishing/static/js/member/mypage-main.js"></script>
 </html>
