--- a/static/css/member/member-mypage-main1.css
+++ b/static/css/member/member-mypage-main1.css
@@ -124,6 +124,10 @@
     font-size: 14px;
     line-height: 20px;
 }
+.header-right6 li {
+    position: relative;
+    padding: 0px 12px;
+}
 
 .header-right-user7 {
     padding-top: 1px;
@@ -173,7 +177,7 @@
     line-height: 22px;
 }
 
-.header-right-menu8 ul li>a,
+.header-right-menu8 ul li > a,
 .header-right-menu8 ul li button {
     display: flex;
     width: 100%;
