--- a/templates/member/mypage-applied.html
+++ b/templates/member/mypage-applied.html
@@ -202,25 +202,25 @@
             <div class="main-wrapper0">
                 <div class="main-content1">
                     <div>
-                        <h2><a href="/myjumpit" style="font-family: Retro;">마이템프</a>
+                        <h2><a href="/publishing/templates/member/mypage-main.html" style="font-family: Retro;">마이템프</a>
                         </h2>
                         <div class="mypagemenu-wrapper">
                             <ul class="mypagemenu1">
                                 <li class="mypagemenu2">
-                                    <a target="_self" href="/applications-status/applied">입사지원
+                                    <a target="_self" href="/publishing/templates/member/mypage-applied.html">입사지원
                                         현황</a>
                                 </li>
                                 <li class="mypagemenu2">
-                                    <a target="_self" href="/celebrate">스크랩 리스트</a>
+                                    <a target="_self" href="/publishing/templates/member/mypage-scraplist.html">스크랩 리스트</a>
                                 </li>
                                 <li class="mypagemenu2">
-                                    <a target="_self" href="/scraps">결제 관리</a>
+                                    <a target="_self" href="/publishing/templates/member/mypage-payment.html">결제 관리</a>
                                 </li>
                                 <li class="mypagemenu2-1">
-                                    <a target="_self" href="/notifications">계정 정보 설정</a>
+                                    <a target="_self" href="/publishing/templates/member/mypage-accountinfo.html">계정 정보 설정</a>
                                 </li>
                                 <li class="mypagemenu2">
-                                    <a target="_self" href="/account">계정 탈퇴</a>
+                                    <a target="_self" href="/publishing/templates/member/mypage-accountwithdrawl.html">계정 탈퇴</a>
                                 </li>
                             </ul>
                         </div>
