--- a/static/css/member/member-mypage-main1.css
+++ b/static/css/member/member-mypage-main1.css
@@ -68,7 +68,9 @@
     font-size: 16px;
     line-height: 24px;
 }
-
+.search-box input:focus {
+    outline : none;
+}
 .searchbox-inner .search-button {
     position: absolute;
     left: 16px;
@@ -84,6 +86,50 @@
 }
 
 .searchbox-inner .close-button {
+    display: none;
+}
+
+.searchbox-hidden {
+    position: absolute;
+    top: 51px;
+    left: 0px;
+    width: 472px;
+    background: rgb(255, 255, 255);
+    border: 1px solid rgb(228, 228, 228);
+    box-shadow: rgba(20, 20, 20, 0.12) 0px 8px 16px;
+    border-radius: 8px;
+    z-index: 6;
+    padding: 24px;
+    display: none;
+}
+
+.recentsearch {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-bottom: 12px;
+}
+
+.recentsearch h4 {
+    font-size: 15px;
+    line-height: 22px;
+    font-weight: 700;
+    color: rgb(0, 0, 0);
+}
+
+.searchbox-hidden-content {
+    padding: 28px 0px 36px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgb(153, 153, 153);
+}
+
+.searchbox-onclick {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
     display: none;
 }
 
@@ -683,3 +729,4 @@
 .content-text3 li:nth-of-type(2n)::before {
     content: "· ";
 }
+
