0201_22시 헤더 쪽 CSS 오류 있음.

--- a/templates/member/mypage-accountinfo.html
+++ b/templates/member/mypage-accountinfo.html
@@ -114,6 +114,15 @@
                                     </g>
                                 </svg></button></div><button class="close-button">닫기</button>
                     </div>
+                    <div class="searchbox-hidden">
+                        <div class="recentsearch">
+                            <h4>최근 검색어</h4>
+                        </div>
+                        <div class="searchbox-hidden-content">최근 검색어가
+                            없습니다.<br></div>
+                    </div>
+                    <div class="searchbox-onclick"></div>
+                </div>
                 </div>
             </div>
             <nav aria-label="Main navigation" class="nav-sc3">
@@ -623,5 +632,5 @@
         style="display: none; visibility: hidden;"></iframe><next-route-announcer
         style="position: absolute;"></next-route-announcer> -->
 </body>
-
+<script src="/publishing/static/js/member/mypage-all.js"></script>
 </html>
