--- a/templates/member/mypage-main.html
+++ b/templates/member/mypage-main.html
@@ -159,16 +159,7 @@
                         </div>
                         <div class="header-right-menu8">
                             <ul>
-                                <li><a href="/myjumpit">마이점핏</a>
-                                </li>
-                                <li>
-                                    <a
-                                        href="/applications-status/applied">취업축하금
-                                        신청</a>
-                                </li>
-                                <li>
-                                    <a href="/account">KDT
-                                        훈련과정 인증</a>
+                                <li><a href="/publishing/templates/member/mypage-main.html">마이점핏</a>
                                 </li>
                                 <li>
                                     <button
@@ -218,10 +209,6 @@
                                 </li>
 
                             </ul>
-                            <!-- <div class="mymenu-popuptext"> -->
-                            <!-- 최종합격하셨나요?<br /><span class="green">💸취업축하금 신청</span>하세요! -->
-                            <!-- 필요 없을 것 같은 부분 -->
-                            <!-- </div> -->
                         </div>
                     </div>
                 </div>
@@ -230,7 +217,7 @@
                     </h1>
                     <ul class="topbox0">
                         <li class="topbox-content1">
-                            <a href="/applications-status/writing">
+                            <a href="/publishing/templates/member/mypage-applied.html">
                                 <dl>
                                     <dt>고민중</dt>
                                     <dd>0</dd>
@@ -238,7 +225,7 @@
                             </a>
                         </li>
                         <li class="topbox-content1">
-                            <a href="/applications-status/applied">
+                            <a href="/publishing/templates/member/mypage-applied.html">
                                 <dl>
                                     <dt>지원완료</dt>
                                     <dd>0</dd>
@@ -246,7 +233,7 @@
                             </a>
                         </li>
                         <li class="topbox-content1">
-                            <a href="/applications-status/passed">
+                            <a href="/publishing/templates/member/mypage-applied.html">
                                 <dl>
                                     <dt>서류통과</dt>
                                     <dd>0</dd>
@@ -254,7 +241,7 @@
                             </a>
                         </li>
                         <li class="topbox-content1">
-                            <a href="/applications-status/hired">
+                            <a href="/publishing/templates/member/mypage-applied.html">
                                 <dl>
                                     <dt>최종합격</dt>
                                     <dd>0</dd>
@@ -262,7 +249,7 @@
                             </a>
                         </li>
                         <li class="topbox-content1">
-                            <a href="/applications-status/rejected">
+                            <a href="/publishing/templates/member/mypage-applied.html">
                                 <dl>
                                     <dt>불합격</dt>
                                     <dd>0</dd>
@@ -1079,6 +1066,6 @@
         src="https://td.doubleclick.net/td/ga/rul?tid=G-HLK7K0XF15&amp;gacid=1029725707.1732531337&amp;gtm=45je51n0v877665575za200&amp;dma=0&amp;gcd=13l3l3l3l1l1&amp;npa=0&amp;pscdl=noapi&amp;aip=1&amp;fledge=1&amp;frm=0&amp;tag_exp=102067555~102067808~102081485~102123608&amp;z=1490588846"
         style="display: none; visibility: hidden"></iframe> -->
 </body>
-<script src="/publishing/static/js/member/mypage-main.js"></script>
+<script src="/publishing/static/js/member/mypage-all.js"></script>
 
 </html>
