--- a/templates/enterprise/mypage-headerfooter.html
+++ b/templates/enterprise/mypage-headerfooter.html
@@ -5,11 +5,11 @@
     <meta name="description" content="개발자 채용이 필요한 순간, 점핏으로 충분합니다">
     <meta name="naver-site-verification"
         content="1d04e6a7cdb21de79c6f6d0bff593aeb5fdefd70">
-    <title>기업 서비스 | 메인 페이지 </title>
+    <title>개발자 채용 플랫폼 | 점핏</title>
     <link rel="icon"
         href="https://cdn.jumpit.co.kr/jumpit/favicon.png">
     <link rel="stylesheet"
-        href="/publishing/static/css/enterprise/mypage-main1.css">
+        href="/publishing/static/css/enterprise/mypage-headerfooter.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
             <div class="header_line">
                 <header class="header">
                     <div class="inner"><a class="logo"
-                            href="/publishing/templates/enterprise/mypage-main.html"><svg width="149"
+                            href="/welcome"><svg width="149"
                                 height="32" viewBox="0 0 149 32"
                                 fill="none"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -76,8 +76,7 @@
                         <nav class="nav">
                             <ul>
                                 <li class="layer_link">
-                                    <div class="link link1"><a href="/publishing/templates/enterprise/mypage-info.html" style="color: white;">기업 정보
-                                        <svg
+                                    <div class="link link1">기업 정보<svg
                                             xmlns="http://www.w3.org/2000/svg"
                                             width="12" height="7"
                                             viewBox="0 0 12 7"
@@ -113,7 +112,7 @@
                                                 class="layer_item"
                                                 href="/jumpit-report/salary">개발자
                                                 연봉 리포트</a></div>
-                                            </a></div>
+                                    </div>
                                     <div class="link link2">이미지 등록<svg
                                             xmlns="http://www.w3.org/2000/svg"
                                             width="12" height="7"
@@ -182,9 +181,11 @@
                                         </svg>
                                         <div class="layer_link_con"><a
                                                 class="layer_item"
-                                                href="/jumpit-report/recruit">포지션 목록록</a><a
+                                                href="/jumpit-report/recruit">개발자
+                                                채용 리포트</a><a
                                                 class="layer_item"
-                                                href="/jumpit-report/salary">포지션 등록 및 수정</a></div>
+                                                href="/jumpit-report/salary">개발자
+                                                연봉 리포트</a></div>
                                     </div>
                                     <div class="link link4">지원자 관리<svg
                                             xmlns="http://www.w3.org/2000/svg"
@@ -254,9 +255,11 @@
                                         </svg>
                                         <div class="layer_link_con"><a
                                                 class="layer_item"
-                                                href="/jumpit-report/recruit">멤버 관리</a><a
+                                                href="/jumpit-report/recruit">개발자
+                                                채용 리포트</a><a
                                                 class="layer_item"
-                                                href="/jumpit-report/salary">멤버 초대</a></div>
+                                                href="/jumpit-report/salary">개발자
+                                                연봉 리포트</a></div>
                                     </div>
                                 </li>
 
