--- a/templates/MainPage.html
+++ b/templates/MainPage.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>메인화면</title>
+        <title>점핏 | 개발자 커리어 점프</title>
         <link rel="stylesheet" href="../static/MainPage.css" />
         <link
             rel="shortcut icon"
@@ -154,6 +154,15 @@
                                 </button>
                             </div>
                             <button class="closeButton">닫기</button>
+                        </div>
+                        <div class="searchWindow">
+                            <div class="searchWindowTitle">
+                                <h4>최근 검색어</h4>
+                            </div>
+                            <div class="searchWindowContents">
+                                최근 검색어가 없습니다.
+                                <br />
+                            </div>
                         </div>
                     </div>
                 </div>
