--- a/static/css/member/mypage-applied1.css
+++ b/static/css/member/mypage-applied1.css
@@ -68,7 +68,9 @@
     font-size: 16px;
     line-height: 24px;
 }
-
+.search-box input:focus {
+    outline : none;
+}
 .searchbox-inner .search-button {
     position: absolute;
     left: 16px;
@@ -167,6 +169,11 @@
     margin-right: -12px;
     font-size: 14px;
     line-height: 20px;
+}
+
+.header-right6 li {
+    position: relative;
+    padding: 0px 12px;
 }
 
 .header-right-user7 {
