--- a/static/css/member/mypage-main1.css
+++ b/static/css/member/mypage-main1.css
@@ -568,6 +568,16 @@
     width: calc(33.3% - 20px);
     padding: 10px;
 }
+.main-content5-bottom-box:hover .img-filter {
+    background-color: rgb(0, 0, 0);
+    opacity: 0.3;
+    width: calc(100% - 19px);
+    height: 166px;
+    position: absolute;
+    top: 11px;
+    z-index: 1;
+    border-radius: 4px;
+}
 
 .main-content5-bottom-box .img-box {
     width: 100%;
@@ -577,7 +587,9 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     position: relative;
 }
-
+.main-content5-bottom-box:hover .img {
+    transform: scale(1.2);
+}
 .main-content5-bottom-box .img-box .img {
     width: 250px;
     height: 166px;
