--- a/static/css/member/mypage-payment1.css
+++ b/static/css/member/mypage-payment1.css
@@ -68,7 +68,9 @@
     font-size: 16px;
     line-height: 24px;
 }
-
+.search-box input:focus {
+    outline : none;
+}
 .searchbox-inner .search-button {
     position: absolute;
     left: 16px;
