--- a/static/css/main/MainPage.css
+++ b/static/css/main/MainPage.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Pretendard';
-    src: url(PretendardVariable.woff2) format('woff');
+    src: url(../../fonts/main/PretendardVariable.woff2) format('woff');
     font-weight: 100 900;
     font-style: normal;
 }
@@ -237,6 +237,10 @@ img, fieldset, iframe {
 .leftNavigation > li{
     position: relative;
     padding: 0px 20px;
+}
+
+.leftNavigation > li:first-child>a{
+    font-weight: 700;
 }
 
 .leftNavigation:hover a {
