--- a/templates/main/MainPage.html
+++ b/templates/main/MainPage.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>점핏 | 개발자 커리어 점프</title>
-        <link rel="stylesheet" href="../static/MainPage.css" />
+        <link rel="stylesheet" href="../../static/css/main/MainPage.css" />
         <link
             rel="shortcut icon"
             href="https://jumpit.saramin.co.kr/favicon.ico"
@@ -1249,5 +1249,5 @@
         </main>
         <!-- // 메인 끝 -->
     </body>
-    <script src="../static/MainPage.js"></script>
+    <script src="../../static/js/main/MainPage.js"></script>
 </html>
